samples/_failures_safe/1761149379_42775c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b0ac7bd.c: In function ‘main’:
./samples/SAFE/__tmp_3b0ac7bd.c:135:5: error: expected declaration or statement at end of input
  135 |     read_matrix(&a, "A");
      |     ^~~~~~~~~~~
